# check_cmake_template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  sample.c  sample.h
tests/: CMakeLists.txt  check_sample.c
